test/syntax/valid/26_import_list.sg
// Multiple imports can appear on the same import line.
import io, git, xml

io.print("imports parsed")
