test/syntax/errors/14_unclosed_string.sg
// expect-error: illegal characters
// A string literal must be closed on the same line.
import io

io.print("unterminated
